log/build_2024-03-21_18-29-25/canbus_interface/stderr.log
  File "/root/ros2-ws-2024/install/canbus_interface/lib/python3.10/site-packages/canbus_interface/can_pub.py", line 5
    from rclpy.node import Node  v
                                 ^
SyntaxError: invalid syntax

